test/libyul/yulSyntaxTests/literal_invalid_type.yul
{
    let x := true:unhappy
}
// ----
// ParserError 5473: (15-27): Types are not valid in untyped Yul.
